fix width on small devices

--- a/src/style.css
+++ b/src/style.css
@@ -61,7 +61,7 @@ div ul li a.etherisc-active-link {
 @media only screen and (max-width: 768px) {
   /* For mobile phones: */
   .bg-plateau::after {
-    width: 8%;
+    width: 10%;
     height: 3%;
 
   }
